<resources>
    <string name="app_name">Uskin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="button_login">Login</string>
    <string name="button_alayze">Analyze</string>
    <string name="button_history">History</string>
    <string name="button_setting">Setting</string>
    <string name="action_settings">Setting</string>
    <string name="button_standard">Standard</string>
    <string name="button_share">Share</string>


    <string name="prompt_email">" "Email</string>
    <string name="prompt_password">" "Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
</resources>
