<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:orientation="vertical"
    android:background="@drawable/back5"
    tools:context="com.example.jenny.skincare.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

    <Button
        android:id="@+id/button_login"
        android:layout_alignParentRight="true"
        android:drawableTop="@mipmap/user"
        android:paddingTop="60dp"
        android:gravity="center_horizontal"
        android:drawablePadding="15dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:text="@string/button_login"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:id="@+id/button_alayze"
        android:drawableTop="@mipmap/analyze"
        android:paddingTop="60dp"
        android:gravity="center_horizontal"
        android:drawablePadding="15dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:text="@string/button_alayze"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:id="@+id/button_history"
        android:drawableTop="@mipmap/history"
        android:paddingTop="60dp"
        android:gravity="center_horizontal"
        android:drawablePadding="15dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white3"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:text="@string/button_history"
        style="?android:attr/borderlessButtonStyle"
        />
        </LinearLayout>


<LinearLayout
    android:layout_height="0dp"
    android:layout_width="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_share"
        android:drawableTop="@mipmap/share"
        android:paddingTop="60dp"
        android:gravity="center_horizontal"
        android:drawablePadding="15dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:background="@color/white2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:text="@string/button_share"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/button_standard"
        android:layout_alignParentLeft="true"
        android:drawableTop="@mipmap/standard"
        android:paddingTop="60dp"
        android:gravity="center_horizontal"
        android:drawablePadding="15dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white3"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:text="@string/button_standard"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/button_setting"
        android:layout_alignParentLeft="true"
        android:drawableTop="@mipmap/setting"
        android:paddingTop="60dp"
        android:gravity="center_horizontal"
        android:drawablePadding="15dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white4"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:text="@string/button_setting"
        style="?android:attr/borderlessButtonStyle" />
</LinearLayout>

    </LinearLayout>




