<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login3"
    >

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="30dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Register"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailtext"
                android:layout_centerVertical="true"
                android:layout_above="@+id/passwordtext"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <AutoCompleteTextView

                    android:background="@color/white0"
                    android:layout_marginLeft="8dp"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordtext"
                        android:background="@drawable/border"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        >

                        <EditText
                            android:layout_marginLeft="8dp"
                            android:background="@color/white0"
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_test_button"
                style="?android:textAppearanceSmall"
                android:background="@color/black1"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Sign in"
                android:textStyle="bold"
                android:textColor="@color/white4"
                android:onClick="toMain"
                android:layout_marginBottom="10dp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>

